# taiko-vr-controller

./: Cargo.toml  flake.nix  readme.md  settings.json
assets/: ddr-pad.blend  ddr-pad.blend1  taiko.blend  taiko.blend1  taiko.glb
ddr/: Cargo.toml
ddr/src/: main.rs
src/: keyb.rs  main.rs  startup.rs
taiko/: Cargo.toml
taiko/src/: keyb.rs  startup.rs
