[package]
name = "ddr"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_mod_openxr = {git = "https://github.com/Schmarni-Dev/bevy_openxr/", branch = "mndx_xdev_spaces"}
bevy_mod_xr = {git = "https://github.com/Schmarni-Dev/bevy_openxr/", branch = "mndx_xdev_spaces"}
bevy_xr_utils = {git = "https://github.com/Schmarni-Dev/bevy_openxr/", branch = "mndx_xdev_spaces"}
openxr = "0.19.0"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.141"
