[package]
name = "taiko"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[alias]
bd = "build --features bevy/dynamic_linking"
rd = "run --features bevy/dynamic_linking"

[dependencies]
bevy = { version = "0.16.1", features = [] }
bevy_gltf = "0.16.1"
bevy_mod_openxr = "0.3.0"
bevy_mod_xr = "0.3.0"
bevy_obj = "0.16.1"
bevy_rapier3d = "0.30.0"
bevy_xr_utils = "0.3.0"
openxr = "0.19.0"
